# open-proctor

./: .gitignore  README.md  app.py  main.py  notes.txt  pyproject.toml  requirements.txt
openproctor/: __init__.py  __main__.py  cli.py  i18n.py  pipeline.py
openproctor/analysis/: ocr_triage.py  ocr_utils.py  similarity.py
openproctor/video/: extractor.py
openproctor/vlm/: ollama_client.py
tests/: conftest.py  test_extractor.py  test_ocr_triage.py  test_ocr_utils.py  test_pipeline.py  test_similarity.py  test_vlm.py
